content-store-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: content-store
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: content-store
    spec:
      containers:
      - args:
        - bundle
        - exec
        - unicorn
        - -p
        - "80"
        image: govuk/content-store:deployed-to-production
        name: content-store
        ports:
        - containerPort: 80
      restartPolicy: Always
