government-frontend-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: government-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: government-frontend
    spec:
      containers:
      - args:
        - bash
        - -c
        - 'bundle exec rake assets:precompile && bundle exec unicorn -p 80'
        image: govuk/government-frontend:deployed-to-production
        name: government-frontend
        ports:
        - containerPort: 80
      restartPolicy: Always
