static-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: static
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - args:
        - bash
        - -c
        - 'bundle exec rake assets:precompile && bundle exec unicorn -p 80'
        image: govuk/static:deployed-to-production
        name: static
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
