content-store-mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: content-store-mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: govuk-mongodb
  type: ClusterIP
