content-store-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: content-store
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: content-store
  type: ClusterIP
