government-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: government-frontend
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: government-frontend
  type: ClusterIP
