static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: static
  type: ClusterIP
